# oath-slapi

./: configure.ac
schema/: oath.schema
src/: Makefile.am  oath.c  oath.h  oath_config.c  oath_hotp.c  oath_resync.c
